--- a/REQUIREMENTS.txt
+++ b/REQUIREMENTS.txt
@@ -1,3 +1,4 @@
+# To install all these run the following from terminal: pip install -r REQUIREMENTS.txt
 Django==1.3
 wsgiref==0.1.2
 Markdown==2.0.3
