--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,10 @@ init.sh
 # No files with passwords/etc
 htusers
 
-# No user-uploaded media or media admin files
-# media/
+# No user-uploaded media or static admin symbolic links
+media/
+static/admin
+
 
 # No packages - better to unpack these files and commit the raw source as Git has its own built in compression methods
 *.7z
